# docs/swagger.json
@@ -2124,6 +2124,9 @@
                 "cacheHitRate": {
                     "type": "number"
                 },
+                "cacheWriteInputTokens": {
+                    "type": "integer"
+                },
                 "cachedInputTokens": {
                     "type": "integer"
                 },
@@ -2248,6 +2251,9 @@
                 },
                 "cacheHitRate": {
                     "type": "number"
+                },
+                "cacheWriteInputTokens": {
+                    "type": "integer"
                 },
                 "cachedInputTokens": {
                     "type": "integer"
@@ -2376,6 +2382,9 @@
         "sessions.ModelUsage": {
             "type": "object",
             "properties": {
+                "cacheWriteInputTokens": {
+                    "type": "integer"
+                },
                 "cachedInputTokens": {
                     "type": "integer"
                 },
@@ -2534,6 +2543,9 @@
                 "branch": {
                     "type": "string"
                 },
+                "cacheWriteInputTokens": {
+                    "type": "integer"
+                },
                 "cachedInputTokens": {
                     "type": "integer"
                 },
@@ -2633,6 +2645,9 @@
         "sessions.UsageTotals": {
             "type": "object",
             "properties": {
+                "cacheWriteInputTokens": {
+                    "type": "integer"
+                },
                 "cachedInputTokens": {
                     "type": "integer"
                 },
@@ -2668,6 +2683,9 @@
         "usage.BreakdownItem": {
             "type": "object",
             "properties": {
+                "cacheWriteInputTokens": {
+                    "type": "integer"
+                },
                 "cachedInputTokens": {
                     "type": "integer"
                 },
@@ -2755,6 +2773,9 @@
                 "bucket": {
                     "type": "string"
                 },
+                "cacheWriteInputTokens": {
+                    "type": "integer"
+                },
                 "cachedInputTokens": {
                     "type": "integer"
                 },
@@ -2798,6 +2819,9 @@
         "usage.Totals": {
             "type": "object",
             "properties": {
+                "cacheWriteInputTokens": {
+                    "type": "integer"
+                },
                 "cachedInputTokens": {
                     "type": "integer"
                 },
